ATLAS-2500: prevent nullpointer exception